horizontal scroll fixed

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
     letter-spacing: 1px;
     height: 100%;
     font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
+    
 }
 
 html,
